--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,8 @@ img {
   object-fit: cover;
   border-radius: 10px;
   object-position: 50% 20%;
-  filter: brightness(var(--brightness)) contrast(var(--contrast)) saturate(var(--saturation));
+  filter: brightness(var(--brightness)) contrast(var(--contrast))
+    saturate(var(--saturation));
 }
 
 * {
@@ -30,8 +31,8 @@ body {
 }
 
 .main-container {
-  width: 320px;
-  height: 550px;
+  width: 500px;
+  height: 700px;
   background: rgb(236, 236, 236);
   background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
   background-size: 200%;
@@ -49,10 +50,10 @@ body {
 h1 {
   width: 220px;
   font-size: 20px;
-  margin: 30px 0 -20px 0;
+  margin: 30px 0 0px 0;
   background: #c3cfe2;
   text-align: center;
-  padding: 10px;
+  padding: 2%;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px;
 }
@@ -72,9 +73,18 @@ h1 span {
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
     rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
-
+.dosyasec-container {
+  width: 350px;
+  max-width: 100%;
+  margin-top: 1%;
+  color: #444;
+  padding: 2px;
+  background: #fff;
+  border-radius: 10px;
+  border: 1px solid rgba(8, 8, 8, 0.288);
+}
 form {
-  height: 200px;
+  height: 400px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -92,7 +102,7 @@ label span {
   background: ghostwhite;
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px;
-  width: 90px;
+  width: 130px;
   text-align: center;
 }
 
@@ -101,7 +111,7 @@ label:last-of-type {
 }
 
 /*********** Baseline, reset styles ***********/
-input[type="range"] {
+input[type='range'] {
   -webkit-appearance: none;
   appearance: none;
   background: transparent;
@@ -111,20 +121,20 @@ input[type="range"] {
 }
 
 /* Varsayılan focus kaldırır */
-input[type="range"]:focus {
+input[type='range']:focus {
   outline: none;
 }
 
 /******** Chrome, Safari, Opera and Edge Chromium styles ********/
 /* slider  */
-input[type="range"]::-webkit-slider-runnable-track {
+input[type='range']::-webkit-slider-runnable-track {
   background-color: #a8d2e1;
   border-radius: 0.5rem;
   height: 0.5rem;
 }
 
 /* slider thumb */
-input[type="range"]::-webkit-slider-thumb {
+input[type='range']::-webkit-slider-thumb {
   -webkit-appearance: none;
   /* Varsayılan görünümü geçersiz kıl */
   appearance: none;
@@ -135,21 +145,21 @@ input[type="range"]::-webkit-slider-thumb {
   width: 1rem;
 }
 
-input[type="range"]:focus::-webkit-slider-thumb {
+input[type='range']:focus::-webkit-slider-thumb {
   outline: 3px solid #808080;
   outline-offset: 0.125rem;
 }
 
 /*********** Firefox styles ***********/
 /* slider track */
-input[type="range"]::-moz-range-track {
+input[type='range']::-moz-range-track {
   background-color: #a8d2e1;
   border-radius: 0.5rem;
   height: 0.5rem;
 }
 
 /* slider  */
-input[type="range"]::-moz-range-thumb {
+input[type='range']::-moz-range-thumb {
   background-color: #808080;
   border: none;
   /*FF'nin uyguladığı ekstra border kaldırır*/
@@ -158,7 +168,7 @@ input[type="range"]::-moz-range-thumb {
   width: 1rem;
 }
 
-input[type="range"]:focus::-moz-range-thumb {
+input[type='range']:focus::-moz-range-thumb {
   outline: 3px solid #808080;
   outline-offset: 0.125rem;
 }
